[package]
name = "pmosource"
version = "0.1.0"
edition = "2021"
authors = ["PMOMusic Contributors"]
description = "Common traits and types for PMOMusic sources"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/pmomusic"
keywords = ["music", "source", "streaming"]
categories = ["multimedia"]

[dependencies]
# Gestion des erreurs
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["sync", "time"] }

# DIDL-Lite support
pmodidl = { path = "../pmodidl" }

# Playlist/FIFO support
pmoplaylist = { path = "../pmoplaylist" }

# Optional cache integrations
pmoaudiocache = { path = "../pmoaudiocache", optional = true }
pmocovers = { path = "../pmocovers", optional = true }

[features]
default = ["cache"]
cache = ["pmoaudiocache", "pmocovers"]
