[package]
name = "pmowebrenderer"
version = "0.1.0"
edition = "2024"

[dependencies]
pmomediarenderer = { path = "../pmomediarenderer" }
pmoserver = { path = "../pmoserver", optional = true }
pmocontrol = { path = "../pmocontrol", optional = true }
pmoconfig = { path = "../pmoconfig" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
async-trait = { workspace = true }

# HTTP
axum = "0.8.4"
axum-extra = "0.12"
tower-http = "0.6"
futures = "0.3"
bytes = "1.0"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
parking_lot = "0.12"
tracing = { workspace = true }

[features]
default = []
pmoserver = ["dep:pmoserver", "dep:pmocontrol", "pmomediarenderer/pmoserver"]
